# PyCEFRizer

./: .gitignore  CHANGELOG.md  CLAUDE.md  MANIFEST.in  MCP_SERVER_README.md  PUBLISHING.md  README.md  RELEASE_CHECKLIST.md  analyze_text.py  check_word_lookup.py  example_usage.py  mcp.json  pyproject.toml  requirements.txt  run_example.sh  setup.py  test_mcp_server.py  test_with_file.py  testdata.txt  testdata_analysis.json
pycefrizer/: __init__.py  __main__.py  cefr_mapping.py  cli.py  config.py  exceptions.py  logger.py  mcp_server.py  metrics.py  pycefrizer.py  resources.py  word_lookup.py
pycefrizer/data/: coca_frequencies.json
tests/: __init__.py  test_cefr_mapping.py  test_config.py  test_exceptions.py  test_pycefrizer.py  test_word_lookup.py
theses/: Uchida_Negishi_2025.md
